created common translating view

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,6 +7,20 @@ android {
     compileSdkVersion 30
     buildToolsVersion "30.0.3"
 
+    packagingOptions {
+        exclude 'META-INF/DEPENDENCIES'
+        exclude 'META-INF/LICENSE'
+        exclude 'META-INF/LICENSE.txt'
+        exclude 'META-INF/license.txt'
+        exclude 'META-INF/NOTICE'
+        exclude 'META-INF/NOTICE.txt'
+        exclude 'META-INF/notice.txt'
+        exclude 'META-INF/ASL2.0'
+        exclude 'META-INF/INDEX.LIST'
+        exclude("META-INF/*.kotlin_module")
+        exclude 'project.properties'
+    }
+
     defaultConfig {
         applicationId "com.example.translator"
         minSdkVersion 19
@@ -14,6 +28,7 @@ android {
         versionCode 1
         versionName "1.0"
         applicationId "opencv.org"
+        multiDexEnabled true
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
@@ -35,6 +50,11 @@ android {
 
 dependencies {
 
+    implementation('com.google.cloud:google-cloud-translate:1.12.0') {
+        exclude group: 'org.apache.httpcomponents'
+        exclude group: 'org.json', module: 'json'
+    }
+    annotationProcessor 'com.google.cloud:google-cloud-translate:1.12.0'
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation 'com.google.mlkit:text-recognition-devanagari:16.0.0-beta1'
     implementation 'androidx.core:core-ktx:1.6.0'
