Added logout floating action button

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -76,4 +76,5 @@ dependencies {
     implementation 'android.arch.navigation:navigation-fragment:1.0.0'
     implementation 'android.arch.navigation:navigation-ui:1.0.0'
     implementation "androidx.fragment:fragment-ktx:1.4.0"
+    implementation 'com.google.android.material:material:1.1.0'
 }
